crates/neenee-tui/src/snapshots/neenee_tui__snapshot_tests__bash_running_streams_live_preview.snap
---
source: crates/neenee-tui/src/snapshot_tests.rs
assertion_line: 451
expression: "render_grid(&m, 80, 24)"
---
▸ Run cargo build

backgrounds:
A=#070808  .=reset
0: A80
